# dicta

./: .gitignore  README.md  index.html  package-lock.json  package.json  prompt-input.html  tts-toast.html  tts-widget.html  vite.config.ts  warning.html  widget.html
.github/workflows/: release.yml
src/: App.tsx  RecordingWidget.tsx  sounds.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: audio.rs  db.rs  lib.rs  main.rs  openai.rs  queue.rs  realtime.rs  system_audio.rs
