[package]
name = "dicta"
version = "0.1.0"
description = "Smart voice-to-text dictation tool"
authors = ["Raphael"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["tray-icon"] }
tauri-plugin-shell = "2.0"
tauri-plugin-global-shortcut = "2.0"
tauri-plugin-clipboard-manager = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream", "multipart"] }
cpal = "0.15"
hound = "3.5"
base64 = "0.22"
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"
dotenv = "0.15"
enigo = "0.2"
http = "1.1"
rusqlite = { version = "0.32", features = ["bundled"] }

[lib]
name = "dicta_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
